# mnist_rpi

./: .gitignore  README  README.md  eval.py  eval_mnn.py  eval_onnx.py  eval_torch.py  torch_to_onnx.py  train_torch.py
data/: mnist_test_1000.npz
eval_mnn/: CMakeLists.txt  eval_mnn.cpp  installation.md  run.cpp
